ZI test of push-ing

--- a/writeup/BombScargle.tex
+++ b/writeup/BombScargle.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt,pdftex]{article}
 
 \title{Robust Periodograms}
-\author{Jake Vanderplas, Zeljko Ivezic}
+\author{Jake Vanderplas, \v{Z}eljko Ivezi\'{c}}
 
 \begin{document}
 \maketitle
